z-index fix 🦀

--- a/style.css
+++ b/style.css
@@ -16,4 +16,5 @@
   height: 100px;
   border: 1px solid black;
   padding: 10px;
+  z-index: 1;
 }
